fixed centering for match on mobile

--- a/TableTennis/wwwroot/css/site.css
+++ b/TableTennis/wwwroot/css/site.css
@@ -2,11 +2,6 @@
     font-size: 14px;
 }
 
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
@@ -864,17 +859,13 @@ body {
 
 @media (max-width: 900px) {
     .tt-scoreboard {
-        width: 99vw;
+        
         min-width: 0;
     }
 
     .tt-middle {
         min-width: 95px;
         min-height: 120px;
-    }
-
-    .tt-score {
-        font-size: 6rem;
     }
 
     /* .tt-player-name {
@@ -899,4 +890,22 @@ body {
     ol, ul {
         padding-left: 0.1rem;
     }
+
+    .tt-scoreboard {
+        width: 100% ;
+
+        margin-left: auto;
+        margin-right: auto;
+        box-sizing: border-box;
+    }
+
+    .tt-middle {
+        width: fit-content;
+        min-width: 0px;
+        min-height: 0px;
+    }
+
+
 }
+
+
